Adding color to profile page

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -97,3 +97,10 @@ h4,h5{
 .nav-post-li{
     margin-left: 10px;
 }
+.prof-card{
+    margin-top: 0.5rem;
+}
+.card-header{
+    background-color: #2c3e50;
+    color: whitesmoke;
+}
