--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,7 +21,7 @@
         <div class="col">
             <div class="card text-center">
                 <div class="card-header">
-                    <h4>Welcome to your profile!</h4>
+                    <h4 class="prof-card">Welcome to your profile!</h4>
                 </div>
                 <div class="card-body">
                     <p><strong>Username :</strong> <%= user.username %></p>
@@ -36,7 +36,7 @@
         <div class="col">
             <div class="card">
                 <div class="card-header text-center">
-                    <h4>Ads you posted!</h4>
+                    <h4 calss="prof-card">Ads you posted!</h4>
                 </div>
                 <div class="card-body">
                     <div class="row">
