--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -94,8 +94,10 @@ h4,h5{
     padding-right: 0.6rem;
     padding-left: 0.6rem;
 }
-.nav-post-li{
-    margin-left: 10px;
+@media (min-width: 992px){
+    .nav-post-li{
+        margin-left: 10px;
+    }
 }
 .prof-card{
     margin-top: 0.5rem;
