--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -99,6 +99,11 @@ h4,h5{
         margin-left: 10px;
     }
 }
+@media (max-width: 992px){
+    .nav-post-li{
+        margin-top: 8px;
+    }
+}
 .prof-card{
     margin-top: 0.5rem;
 }
