--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -30,12 +30,15 @@ h4,h5{
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .card-img-top{
-    max-height: 150px;
+    height: 150px;
     object-fit: cover;
 }
 .card-title {
     margin-bottom: 1rem;
     font-weight: 700;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .alert-homepage{
     margin-top: 16px;
