--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -13,7 +13,6 @@
     </div>
     <div class="row"> 
         <% pets.forEach(function(pet){ %>
-            <% if(pet.price>0){ %>
             <div class="col-md-3 col-sm-6 hom-card">
                 <div class="card pet-card">
                     <img class="card-img-top" src="<%= pet.imageurl %>">
@@ -28,8 +27,41 @@
                     </div>
                 </div>
             </div>
-            <% }else{return;} %>
         <% }); %>
+    </div>
+    <div class="row">
+        <div class="col">
+            <% if (pages > 0) { %>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        <% if (current == 1) { %>
+                            <li class="page-item disabled"><a class="page-link">First</a></li>
+                        <% } else { %>
+                            <li class="page-item"><a class="page-link" href="/shop/1">First</a></li>
+                        <% } %>
+                        <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+                        <% if (i !== 1) { %>
+                            <li class="page-item disabled"><a class="page-link">...</a></li>
+                        <% } %>
+                        <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
+                            <% if (i == current) { %>
+                                <li class="page-item active"><a class="page-link"><%= i %></a></li>
+                            <% } else { %>
+                                <li class="page-item"><a class="page-link" href="/shop/<%= i %>"><%= i %></a></li>
+                            <% } %>
+                            <% if (i == Number(current) + 4 && i < pages) { %>
+                                <li class="page-item disabled"><a class="page-link">...</a></li>
+                            <% } %>
+                        <% } %>
+                        <% if (current == pages) { %>
+                            <li class="page-item disabled"><a class="page-link">Last</a></li>
+                        <% } else { %>
+                            <li class="page-item"><a class="page-link" href="/shop/<%= pages %>">Last</a></li>
+                        <% } %>
+                    </ul>
+                </nav>
+            <% } %>
+        </div>
     </div>
 </div>  
 <% include partials/footer %>
