--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -117,3 +117,15 @@ h4,h5{
 .pagination{
     margin-top: 1rem;
 }
+.page-item.active .page-link{
+    background-color: #2c3e50;
+    border-color: #2c3e50;
+}
+.page-item.active .page-link:hover{
+    color: white;
+}
+.footer-icon{
+    font-size: 1.5rem;
+    color: white;
+    margin: 0.5rem;
+}
