Adding navbar peoperly

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,8 @@
-<div class="row">
-    <div class="col bg-dark text-center">
-        <footer>
-            <i class="fab fa-facebook-f footer-icon"></i>
-            <i class="fab fa-instagram footer-icon"></i>
-            <i class="fab fa-twitter footer-icon"></i>
-        </footer>
+<div class="footer page-footer bg-dark">
+    <div class="footer-copyright text-center">
+        <i class="fab fa-facebook-f footer-icon"></i>
+        <i class="fab fa-instagram footer-icon"></i>
+        <i class="fab fa-twitter footer-icon"></i>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
