--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
         if(pathname.includes("/adopt/")){
             pathname = "/adopt/1";
         }
-        $('ul a[href="'+pathname+'"]').parent().addClass('underline');
+        $('ul.nav a[href="'+pathname+'"]').parent().addClass('underline');
         });
     </script>
     <title>Pawfection</title>
