--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -33,8 +33,11 @@
             </button>
         </div>
     <% } %> 
-    <div class="jumbotron">
-        <h1 class="jumb-head">Choose a pet to adopt</h1>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Adopt a pet.</h1>
+            <p class="lead">A pet is a man's best friend, find yours today.</p>
+        </div>
     </div>
     <div class="row">
         <% pets.forEach(function(pet){ %>
