--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,6 +3,7 @@
         <i class="fab fa-facebook-f footer-icon"></i>
         <i class="fab fa-instagram footer-icon"></i>
         <i class="fab fa-twitter footer-icon"></i>
+        <p class="fot-cop">All rights reserved by pawfection</p>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
