--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/adopt/1">
-            <img src="https://i.imgur.com/FFQZBux.png" id="head-img" width="30" height="30" alt="">
+            <img src="https://i.imgur.com/WtoVUSk.jpg" id="head-img" width="30" height="30" alt="">
             Pawfection
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
