--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
     <title>Pawfection</title>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="/adopt/1">
             <img src="https://i.imgur.com/WtoVUSk.jpg" id="head-img" width="30" height="30" alt="">
             Pawfection
