--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group">
                     <label for="post-disc">Description</label>
-                    <input type="text" name="pet[description]" class="form-control" id="post-disc" value="<%= ad.description %>">
+                    <input type="text" name="pet[description]" class="form-control" id="post-disc" value="<%= ad.discription %>">
                 </div>
                 <div class="form-group">
                     <label for="inputCateg">Category</label>
